# WebGPU-Voxel-Engine

./: .gitignore  Application.cpp  Application.h  CMakeLists.txt  CMakeSettings.json  Chunk.h  ChunkData.h  ChunkManager.h  ChunkWorkerSystem.h  ImageUpscaler.h  Ray.h  ResourceManager.cpp  ResourceManager.h  ThreadSafeChunk.h  ThreadSafeChunkManager.h  VertexAttributes.h  VoxelMaterial.h  WorldGenerator.h  magic_enum.hpp  main.cpp  output.txt  webgpu-utils.cpp  webgpu-utils.h
Rendering/: BufferManager.cpp  BufferManager.h  BufferPool.h  PipelineManager.cpp  PipelineManager.h  TextureManager.cpp  TextureManager.h  TexturePool.h  WebGPUContext.cpp  WebGPUContext.h  WebGPURenderer.cpp  WebGPURenderer.h
resources/: shader.wgsl
webgpu/include/webgpu/: webgpu.hpp
